# nt2

./: CMakeLists.txt  README.rst
cmake/: NT2Module.cmake  alias.dox  nt2.boost.cmake  nt2.compiler.options.cmake  predef.dox
demo/: CMakeLists.txt
demo/biquad/scalar/: CMakeLists.txt  biquad_scalar.cpp
demo/biquad/simd/: CMakeLists.txt  biquad_simd.cpp
demo/blackscholes/nt2/: blackandscholes_nt2.cpp
demo/blackscholes/nt2_merged/: blackandscholes_nt2_merged.cpp
demo/blackscholes/scalar/: blackandscholes_scalar.cpp
demo/blackscholes/simd/: blackandscholes_simd.cpp
demo/cuda/nt2/: CMakeLists.txt  cuda_bandwidth_bench_nt2.cpp  cuda_nt2.cpp  cuda_trsm.cpp
demo/filters/: apply_stencil.hpp  binary_erosion.hpp  erosion.hpp  reduction.hpp  stencil.hpp  window.hpp  window_helpers.hpp
demo/filters/scalar/: CMakeLists.txt  filters_scalar.cpp
demo/filters/simd/: CMakeLists.txt  filters_simd.cpp
demo/latticeboltzmann/aos/: CMakeLists.txt  D2Q9_kernels.hpp  latticeboltzmann_aos.cpp
demo/latticeboltzmann/aos_opt/: CMakeLists.txt  D2Q9_kernels.hpp  latticeboltzmann_aos_opt.cpp
demo/latticeboltzmann/nt2/: CMakeLists.txt  D2Q9_kernels.hpp  latticeboltzmann_nt2.cpp
demo/latticeboltzmann/nt2_opt/: CMakeLists.txt  D2Q9_kernels.hpp  latticeboltzmann_nt2_opt.cpp
demo/latticeboltzmann/scalar/: CMakeLists.txt  D2Q9_kernels.hpp  latticeboltzmann_scalar.cpp
demo/mandelbrot/nt2/: mandelbrot_nt2.cpp
demo/rgb2grey/nt2/: rgb2grey_nt2.cpp
demo/rgb2yuv/nt2/: rgb2yuv_nt2.cpp
demo/saxpy/nt2/: saxpy_nt2.cpp
demo/sdot/nt2/: sdot_nt2.cpp
demo/sigmadelta/nt2/: sigmadelta_nt2.cpp
demo/submatrix_copy/nt2/: CMakeLists.txt  get_copy.hpp  submatrix_copy_nt2.cpp
demo/submatrix_copy/scalar/: CMakeLists.txt  get_copy.hpp  submatrix_copy_scalar.cpp
demo/sum/nt2/: CMakeLists.txt  sum_nt2.cpp
demo/sum/scalar/: CMakeLists.txt  sum_scalar.cpp
demo/sum/simd/: CMakeLists.txt  sum_simd.cpp
doc/user/: interoperability.qbk  tutorial.qbk
modules/arch/cuda/cmake/: nt2.arch.cuda.dependencies.cmake
modules/arch/cuda/unit/: CMakeLists.txt
modules/arch/cuda/unit/functions/: trsm.cpp
modules/arch/cuda/unit/future/: CMakeLists.txt  Obj_cuda.cu  future.cpp
modules/arch/cuda/unit/general/: CMakeLists.txt  cuda_buffer.cpp  cuda_container.cpp  cuda_pinned.cpp
modules/arch/cuda/unit/signal/: CMakeLists.txt  fft.cpp  ifft.cpp
modules/arch/hpx/bench/microbench/: CMakeLists.txt  fold.cpp  scan.cpp  transform.cpp
modules/arch/hpx/cmake/: nt2.arch.hpx.dependencies.cmake
modules/arch/hpx/unit/functions/: CMakeLists.txt  homot.cpp  linspace.cpp  lu_incpiv.cpp  repnum.cpp  transform.cpp
modules/arch/hpx/unit/futures/: CMakeLists.txt  future.cpp  shared_future.cpp
modules/arch/opencl/: CMakeLists.txt
modules/arch/opencl/cmake/: nt2.arch.opencl.dependencies.cmake
modules/arch/opencl/tools/external_kernel/backends/opencl/: CMakeLists.txt  opencl.cpp  utility.hpp
modules/arch/opencl/tools/resource_compiler/: CMakeLists.txt  resource_compiler.cpp
modules/arch/opencl/tools/resource_compiler/include/nt2/sdk/: resource.hpp
modules/arch/opencl/unit/: CMakeLists.txt
modules/arch/opencl/unit/functions/: CMakeLists.txt  transform.cpp
modules/arch/opencl/unit/general/: CMakeLists.txt  blacknscholes.cpp  generated.cpp  generated_cl.cpp  opencl_buffer.cpp  specific_opencl.cpp  transform.cpp
modules/arch/openmp/bench/microbench/: CMakeLists.txt  fold.cpp  scan.cpp  transform.cpp
modules/arch/openmp/unit/functions/: CMakeLists.txt  colon.cpp  eye.cpp  ric.cpp  transform.cpp
modules/arch/openmp/unit/futures/: CMakeLists.txt  future.cpp  shared_future.cpp
modules/arch/shared_memory/cmake/: nt2.arch.shared_memory.dependencies.cmake
modules/arch/shared_memory/script/: linreg.awk  run_microbenchmarks.sh
modules/arch/shared_memory/src/: CMakeLists.txt  foo.cpp
modules/arch/shared_memory/unit/: CMakeLists.txt
modules/arch/shared_memory/unit/futures/: CMakeLists.txt  future.cpp  shared_future.cpp
modules/arch/tbb/bench/: CMakeLists.txt
modules/arch/tbb/bench/microbench/: CMakeLists.txt  fold.cpp  scan.cpp  transform.cpp
modules/arch/tbb/cmake/: nt2.arch.tbb.dependencies.cmake
modules/arch/tbb/unit/: CMakeLists.txt
modules/arch/tbb/unit/functions/: CMakeLists.txt  colon.cpp  ones.cpp  rif.cpp  rows.cpp  transform.cpp  zeros.cpp
modules/arch/tbb/unit/futures/: CMakeLists.txt  future.cpp  shared_future.cpp
modules/binding/magma/cmake/: nt2.binding.magma.dependencies.cmake
modules/binding/magma/unit/: CMakeLists.txt
modules/binding/magma/unit/future/: CMakeLists.txt  Obj_cuda.hpp  future.cpp  future.cu
modules/binding/magma/unit/general/: CMakeLists.txt
modules/binding/magma/unit/magma/: CMakeLists.txt  geqrf.cpp  gesvd.cpp  gesvd_w.cpp  posv.cpp
modules/boost/dispatch/doc/: CMakeLists.txt  abi.qbk  contents.qbk  dispatch.qbk  functor.qbk  hierarchy.qbk  hierarchy_reference.doxyfile  overview.qbk  rationale.qbk  tutorial.qbk  type_traits.qbk
modules/boost/dispatch/doc/hierarchy/: concept.qbk  target.qbk
modules/boost/dispatch/unit/meta/: CMakeLists.txt  combine.cpp  fusion.cpp  is_homogeneous.cpp
modules/core/base/doc/: reference.doxyfile
modules/core/container/table/bench/: c_vs_table.cpp
modules/core/signal/bench/: CMakeLists.txt  conv.cpp  filter.cpp  filter_simd.cpp
modules/core/signal/cmake/: FindFFTW.cmake
modules/core/signal/unit/general/: CMakeLists.txt  conv.cpp  fft.cpp  globalzero_crossing_rate.cpp  ifft.cpp
modules/sdk/functor/src/: CMakeLists.txt
modules/sdk/meta/unit/: as.cpp  fusion.cpp  hierarchy.cpp
modules/test/benchmark/src/: perform_benchmark.cpp
script/bash/: bar_speedup.sh
tools/external_kernel/: CMakeLists.txt  backend.cpp  backend.hpp  external_kernel.cpp  parse_symbol.cpp  parse_symbol.hpp  shared_handle.hpp  types.hpp
tools/external_kernel/boost/process/: self.hpp
tools/external_kernel/boost/process/detail/: pipe.hpp  win32_ops.hpp
tools/kernel_gen/: CMakeLists.txt  kernel_gen.cpp
tools/runtime_costs/: CMakeLists.txt  runtime_costs.cpp
tools/x86_model/: CMakeLists.txt
(+3337 files in other folders)
